--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-py": "^1.9.1",
     "typescript": "5.0.4"
   },
   "devDependencies": {
