--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
+    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "husky": "^8.0.3",
     "prettier": "^3.0.0"
   }
