--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.1",
+    "@mui/icons-material": "^5.14.1",
+    "@mui/material": "^5.14.2",
     "@types/node": "18.16.0",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
